Changes in Version 0.2.3 (2021-xx-xx)
=====================================
toolbox
 - Fix bootHisto passing of kwargs to histogram and bar.

Changes in Version 0.2.2 (2020-12-29)
=====================================
- Document end of support for Python 2
- Quaternion math functions moved to coordinates module
- Remove message on first import.
- Fixed setup.py not finding f2py on some OSX installs
coordinates
 - Include upstream fix for SPH->RLL coordinate transform
datamodel
 - Fix in SpaceData.toXXX() methods which would fail in some cases, now work as intended
 - Documentation update and default units change in createISTPattrs
datamanager
 - New function "rebin", rebin an axis of an array by contents of another
irbempy
 - Update IRBEMlib to rev620
 - Rev620 adds IGRF13 coefficients
 - Add conversion so all systems supported by coordinates can be passed
   to IRBEMlib routines
 - Fix compilation on Raspberry Pi
plot
 - utils.EventClicker support for non-line plots (e.g. pcolor)
 - New method for adding arrows to lines in utils
 - spectrogram.spectrogram class renamed to Spectrogram to avoid collision
   with its module.
pycdf
 - VarCopy objects now carry information to help reproduce original
 - Newly-public method nelems to get number of elements in zVar
 - New function concatCDF to read data from multiple CDFs
 - Fix assignment of "raw" values to EPOCH16 Attribute
 - Fix "minimum value" calculation for TT2000 types
 - Fix carryover of compression parameter when making a variable from
   another variable
 - istp.VariableChecks adds check for VALID/SCALE MIN/MAX Entry types
 - istp.VariableChecks adds check for DELTA attributes
 - istp.VariableChecks adds check for FILLVAL
 - istp.VariableChecks and FileChecks add check for empty attribute Entries
 - istp.VarBundle class to copy variables, slices, and depends between CDFs
 - istp.nanfill function to replace fill values with NaN
 - Warn if make CDF without explicitly setting backward compatible mode